corrected spacing in tag on footer

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -123,6 +123,7 @@ main article {
 .mytheme_tag {
 	float: left;
 	padding-top: 20px;
+	padding-left: 1em;
 	color: #FFFFFF;
 }
 .mytheme_tag a{
